--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 
 install:
   - perlbrew list
+  - cpanm https://cpan.metacpan.org/authors/id/P/PL/PLICEASE/Clustericious-1.12.tar.gz
   - dzil authordeps --missing | cpanm -n
   - dzil listdeps   --missing | cpanm -n
 
