--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ version          = 0.01
 :version      = 1.93
 travis_status = 1
 release_tests = 1
+github_user   = clustericious
 installer     = Author::Plicease::MakeMaker
 
 [RemovePrereqs]
